--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link id="favicon" rel="icon" href="/assets/favicon-light.ico" type="image/x-icon">
+    <link id="favicon" rel="icon" href="/favicon-light.ico" type="image/x-icon">
     <title>CleatCentral</title>
     <script>
       // Function to set the favicon based on the current theme
